# project-ng-py

backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: database.py  init_db.py
backend/app/middlewares/: token_middleware.py
backend/app/models/: token.py  user.py
backend/app/providers/: auth_provider.py
backend/src/: main.py
backend/src/api/: routes.py
backend/src/core/: config.py
backend/src/models/: response.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/components/forgot-password/: forgot-password.component.html  forgot-password.component.ts
frontend/src/app/components/login/: login.component.html  login.component.ts
frontend/src/app/components/register/: register.component.html  register.component.ts
frontend/src/app/services/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts
